# quanvolutional_neural_network

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: cifar10_classical_cnn.yaml  cifar10_quanv_nn.yaml  mnist_classical_cnn.yaml  mnist_quanv_nn.yaml  test_classical_cnn.yaml  test_quanv_nn.yaml
scripts/: get_accuracy_graph.py  proto_train_qnn.py  train_model_with_cifar10.py  train_model_with_mnist.py  train_model_with_no_meaning_data.py
src/: classical_cnn.py  classical_convolutional_neural_network.py  one_sum_decoder.py  plain_dataset.py  quanv_filter.py  quanv_layer.py  quanv_nn.py  quanv_nn_trainer.py  quanvolutional_filter.py  quanvolutional_layer.py  quanvolutional_neural_network.py  sqrt_swap_gate.py  train_model.py  trainer.py  utils.py  utils_qnn.py  z_basis_encoder.py
src/decoders/: base_decoder.py  one_sum_decoder.py
src/encoders/: base_encoder.py  z_basis_encoder.py
tests/: test_plain_dataset.py  test_utils.py  test_utils_qnn.py
